United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6914002 unsigned compare problem after 5057818
6914002 : unsigned compare problem after 5057818

Details
Type:
Bug
Submit Date:
2010-01-04
Status:
Resolved
Updated Date:
2010-04-02
Project Name:
JDK
Resolved Date:
2010-01-19
Component:
hotspot
OS:
solaris_9
Sub-Component:
compiler
CPU:
sparc
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs17
Fixed Versions:
hs17

Related Reports
Backport:
Backport:

Sub Tasks

Description
cc1plus: warnings being treated as errors
 /hotspot-comp-latest/src/share/vm/code/nmethod.cpp: In member function 'bool nmethod::make_not_entrant_or_zombie(int)':
 /hotspot-comp-latest/src/share/vm/code/nmethod.cpp:1197: warning: comparison between signed and unsigned integer expressions

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/b1f619d38249
                                     
2010-01-06



Hardware and Software, Engineered to Work Together