6914002: unsigned compare problem after 5057818

Reviewed-by: kvn, twisti